attempted fix to background cover on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  min-height:100%;
+ }
+
 body {
   background: linear-gradient( rgba(20, 20, 20, .5), rgba(20, 20, 20, .5)), url(images/hiking.jpg ) no-repeat center center fixed;
   -webkit-background-size: cover;
